--- a/src/content/TechSkills/TechModal.css
+++ b/src/content/TechSkills/TechModal.css
@@ -113,6 +113,7 @@
     margin-top: 0.75rem;
     text-align: center;
     font-size: 0.875rem;
+    color: var(--secondary-text-color);
 }
 
 .TechModal-name.dark {
