--- a/src/components/Grid/Widgets/Widgets.css
+++ b/src/components/Grid/Widgets/Widgets.css
@@ -50,17 +50,6 @@
     box-sizing: border-box;
 }
 
-.MusicWidgetContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    padding: 1rem;
-    background-color: rgb(0, 0, 0, 0.15);
-    border-radius: 15px;
-}
-
 .text-card > *:not(:last-child) {
     margin-bottom: 0.5rem; /* Adjust the margin as needed */
 }
@@ -317,4 +306,46 @@
 
 .timezone-label.dark {
     color: var(--widget-dark-text, #f0f0f09a);
+}
+
+.MusicWidgetContainer {
+    display: flex;
+    flex-direction: row;
+    /*align-items: center;
+    justify-content: center;*/
+    height: 100%;
+
+    background-color: rgb(0, 0, 0, 0.15);
+    border-radius: 15px;
+    align-items: center;
+}
+
+.AlbumArt {
+    display: flex;
+    width: 100px;
+    height: 100px;
+}
+
+.AlbumImage {
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.MusicCoreContent {
+    max-height: 100%;
+    height: 100px;
+    background-color: red;
+}
+
+.ServiceLogo {
+    display: flex;
+    width: 55px;
+    height: 55px;
+    margin-left: auto;
+    margin-right: 10px; /* Adjust to desired spacing */
+    background-color: red;
+}
+
+.ServiceImage {
+    box-sizing: border-box;
 }
