--- a/src/components/Grid/Widgets/StatusCard/StatusCard.css
+++ b/src/components/Grid/Widgets/StatusCard/StatusCard.css
@@ -54,16 +54,19 @@
 .Stext-card {
     width: 100%;
     height: 100%;
+    padding: 3px;
 
+    box-sizing: border-box;
     border-radius: 0 0 10px 10px;
     box-sizing: border-box;
 }
 
 /* Title inside the card */
 .Stext-card-title {
-    font-size: 18px;
-    margin: 0 0 10px 0;
-    font-weight: bold;
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 5px;
+    line-height: 1.4;
 }
 
 /* Body inside the card */
