--- a/src/components/Grid/Widgets/MusicWidget/MusicWidget.css
+++ b/src/components/Grid/Widgets/MusicWidget/MusicWidget.css
@@ -16,6 +16,7 @@
     background-color: rgba(0, 0, 0, 0.397);
     color: rgba(255, 255, 255, 0.705);
 }
+
 .AlbumArt {
     display: flex;
     height: 110px;
@@ -137,4 +138,193 @@
 }
 
 .AlbumArt.Mobile {
+}
+
+/* Last Played */
+
+.LPContainer {
+    display: flex;
+    flex-direction: column;
+
+    height: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.534), rgba(151, 151, 151, 0.15));
+    border-radius: 15px;
+
+    color: rgba(0, 0, 0, 0.747);
+}
+
+.LPContainer.dark {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.788), rgba(0, 0, 0, 0.096));
+
+    color: rgba(255, 255, 255, 0.705);
+}
+
+.LPHeader {
+    display: flex;
+    justify-content: center; /* Centers the content horizontally */
+    align-items: center; /* Centers the content vertically */
+    font-size: 13px;
+    font-weight: 700;
+    padding: 2px;
+    height: 20% !important;
+    /*background-color: rgba(0, 255, 255, 0.151);*/
+    box-sizing: border-box;
+    margin-bottom: 0;
+    width: 100%;
+    padding-left: 5px;
+}
+
+.LPMusicWidgetContainer {
+    display: flex;
+    flex-direction: row;
+    height: 80% !important;
+    /*align-items: center;
+    justify-content: center;*/
+    align-items: center;
+}
+
+.LPMusicWidgetContainer.dark {
+    background-color: transparent;
+    background-image: none;
+
+    color: rgba(255, 255, 255, 0.705);
+}
+
+@media (max-width: 768px) {
+    .LPHeader {
+        font-size: 10px;
+        font-weight: 700;
+        padding: 2px;
+    }
+}
+
+@media (max-width: 480px) {
+    .LPHeader {
+        font-size: 10px;
+        font-weight: 700;
+        padding: 2px;
+    }
+}
+
+.LPAlbumArt {
+    display: flex;
+    height: 100px;
+    width: 100px;
+}
+
+.LPAlbumImage {
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.LPMusicCoreContent {
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    font-size: auto;
+    height: 100px;
+    width: 100%;
+
+    justify-self: center;
+}
+
+.LPAlbumNameContainer {
+    height: 70% !important;
+    overflow: hidden;
+    display: flex;
+    align-items: center; /* Vertically center the content */
+    justify-content: center; /* Horizontally center the content */
+}
+
+.LPAlbumName {
+    width: 100%; /* Ensure the text takes full width for proper truncation */
+
+    /* Auto-adjust text size */
+    font-size: calc(100%); /* Adjust dynamically */
+    line-height: 1.2; /* Prevent overflow */
+
+    text-align: center; /* Keep text centered within the element */
+
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* Show maximum of 2 lines */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.LPAlbumArtistContainer {
+    height: 30% !important;
+    overflow: hidden; /* Prevent text from overflowing */
+
+    display: -webkit-box;
+    -webkit-line-clamp: 1; /* Show maximum of 2 lines */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.LPAlbumArtist {
+    margin-top: 0px;
+    /* Auto-adjust text size */
+    font-size: calc(100%); /* Adjust dynamically */
+    line-height: 1.1; /* Prevent overflow */
+    text-align: center; /* Center text */
+
+    display: -webkit-box;
+    -webkit-line-clamp: 1; /* Show maximum of 2 lines */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.LPServiceLogo {
+    display: flex;
+    width: 45px;
+    height: 45px;
+    margin-left: auto;
+    padding-left: 5px;
+    margin-right: 5px; /* Adjust to desired spacing */
+}
+
+.LPServiceImage {
+    box-sizing: border-box;
+}
+
+/* Media query for height less than 800px */
+@media (max-width: 1650px) {
+    .LPAlbumArt {
+    }
+}
+
+@media (max-width: 1200px) {
+    .LPAlbumArt {
+        height: 110px;
+        width: 110px;
+    }
+}
+
+@media (max-width: 768px) {
+    .LPAlbumArt {
+        height: 75px;
+        width: 75px;
+    }
+    .LPServiceLogo {
+        width: 30px;
+        height: 30px;
+    }
+}
+
+@media (max-width: 480px) {
+    .LPAlbumArt {
+        height: 90px;
+        width: 90px;
+    }
+    .LPServiceLogo {
+        width: 40px;
+        height: 40px;
+    }
+}
+
+.LPAlbumArt.Mobile {
 }
