Reworking to use backend

--- a/src/components/Grid/Widgets/WeatherWidget/WeatherWidget.css
+++ b/src/components/Grid/Widgets/WeatherWidget/WeatherWidget.css
@@ -123,3 +123,9 @@
         width: 110px;
     }
 }
+
+.weather-unavailable {
+    display: flex;
+    align-self: center;
+    justify-self: center;
+}
