--- a/src/components/Grid/Widgets/MusicWidget/MusicWidget.css
+++ b/src/components/Grid/Widgets/MusicWidget/MusicWidget.css
@@ -17,7 +17,7 @@
     color: rgba(255, 255, 255, 0.705);
 }
 
-.AlbumArt {
+.CPAlbumArt {
     display: flex;
     height: 110px;
     width: 110px;
@@ -89,7 +89,7 @@
     text-overflow: ellipsis;
 }
 
-.ServiceLogo {
+.CPServiceLogo {
     display: flex;
     width: 45px;
     height: 45px;
@@ -104,37 +104,77 @@
 
 /* Media query for height less than 800px */
 @media (max-width: 1650px) {
-    .AlbumArt {
+    .CPAlbumArt {
     }
 }
 
 @media (max-width: 1200px) {
-    .AlbumArt {
+    .CPAlbumArt {
         height: 110px;
         width: 110px;
     }
 }
 
 @media (max-width: 768px) {
-    .AlbumArt {
+    .CPAlbumArt {
         height: 75px;
         width: 75px;
     }
-    .ServiceLogo {
+    .CPServiceLogo {
         width: 30px;
         height: 30px;
     }
 }
 
 @media (max-width: 480px) {
-    .AlbumArt {
-        height: 90px;
-        width: 90px;
+    .CPAlbumArt {
+        height: 75px;
+        width: 75px;
     }
-    .ServiceLogo {
+    .CPServiceLogo {
         width: 40px;
         height: 40px;
     }
+}
+
+.currentTimeProgress {
+    display: flex;
+    flex-grow: 1;
+    height: 4px;
+    appearance: none;
+    background-color: #e0e0e0;
+    border-radius: 2px;
+    margin: 0;
+    width: 100%; /* Ensure it spans the full width */
+}
+
+.currentTimeProgress::-webkit-progress-bar {
+    background-color: #e0e0e0;
+    border-radius: 2px;
+}
+
+.currentTimeProgress::-webkit-progress-value {
+    background-color: #1db954;
+    border-radius: 2px;
+}
+
+.currentTimeProgress::-moz-progress-bar {
+    background-color: #1db954;
+    border-radius: 2px;
+}
+
+.currentTimeValues {
+    display: flex;
+    justify-content: space-between; /* Pushes items to opposite edges */
+    align-items: center; /* Vertically centers the items */
+    width: 100%; /* Ensure it spans the full width */
+    padding: 0 16px; /* Optional: Adds horizontal padding */
+}
+
+.CurrentTime,
+.TotalTime {
+    font-size: 10px;
+    color: #6a6a6a;
 }
 
 .AlbumArt.Mobile {
@@ -317,8 +357,8 @@
 
 @media (max-width: 480px) {
     .LPAlbumArt {
-        height: 90px;
-        width: 90px;
+        height: 75px;
+        width: 75px;
     }
     .LPServiceLogo {
         width: 40px;
@@ -327,4 +367,20 @@
 }
 
 .LPAlbumArt.Mobile {
+}
+
+.currentTimeContainer {
+    display: none; /* Hidden by default */
+    align-items: center;
+    flex-direction: column;
+    gap: 0;
+    padding: 0;
+
+    height: 25px;
+}
+
+@media (min-width: 768px) {
+    .currentTimeContainer {
+        display: flex; /* Visible when width >= 600px */
+    }
 }
