--- a/src/components/Grid/Widgets/StatusCard/StatusCard.css
+++ b/src/components/Grid/Widgets/StatusCard/StatusCard.css
@@ -4,6 +4,10 @@
     height: 100%;
     border-radius: 15px;
     color: rgba(0, 0, 0, 0.664);
+    padding: 10px 5px 10px 5px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 }
 
 .SCwidget-container.dark {
@@ -15,8 +19,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 10px;
-
+    padding: 0px 5px 0px 5px;
     border-radius: 10px 10px 0 0;
     box-sizing: border-box;
 }
@@ -52,20 +55,25 @@
 
 /* Card below the header */
 .Stext-card {
-    width: 100%;
-    height: 100%;
     padding: 3px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: space-between;
+    height: 60% !important;
+    box-sizing: border-box;
+}
 
-    box-sizing: border-box;
-    border-radius: 0 0 10px 10px;
-    box-sizing: border-box;
+/* Add styles for the children of .Stext-card */
+.Stext-card > * {
+    flex-shrink: 1; /* Allow items to shrink */
 }
 
 /* Title inside the card */
 .Stext-card-title {
     font-size: 14px;
-    margin-top: 0;
-    margin-bottom: 5px;
+    margin: 0px;
+
     line-height: 1.4;
 }
 
@@ -73,5 +81,10 @@
 .Stext-card-content {
     font-size: 14px;
     margin: 0;
+
     line-height: 1.4;
+}
+
+.Stext-card-content.mobile {
+    font-size: 12px;
 }
