--- a/src/components/Grid/Widgets/TextCardWidget/TextCardWidget.css
+++ b/src/components/Grid/Widgets/TextCardWidget/TextCardWidget.css
@@ -3,49 +3,64 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+
     border-radius: 0.5rem;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
     overflow: hidden;
-    padding-bottom: 0px;
-    padding-top: 0px;
+    padding: 0px;
     margin-top: 0;
+
     border-radius: 15px;
     background-color: rgba(138, 138, 138, 0.05);
     box-sizing: border-box;
+    gap: 5px;
+}
+
+.text-card.Mobile {
+    gap: 0px;
 }
 
 .text-card > *:not(:last-child) {
-    margin-bottom: 0.5rem; /* Adjust the margin as needed */
+    margin-bottom: 0.3rem; /* Adjust the margin as needed */
 }
 
 .text-card.Mobile > *:not(:last-child) {
     margin-top: 0.5rem; /* Adjust the margin as needed */
-    padding-bottom: 15px;
+    padding-bottom: 0px;
 }
 
 .text-card-title {
-    font-size: 1.125rem;
     font-weight: 500;
     font-size: 24px;
     color: #111827cc;
     margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .text-card-title.Mobile {
-    font-size: 1.2rem;
+    font-size: 1.125rem;
+
+    margin-top: 0px;
 }
-s .text-card-content {
+
+.text-card-content {
     width: 100%;
     flex: 1;
     margin-top: 0;
     overflow: auto;
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
+
     padding-top: 0px;
     padding-bottom: 0px;
+    font-size: 16px;
+}
+
+.text-card-content.Mobile {
     font-size: 14px;
+    height: 90px !important;
+    margin-bottom: 0px;
 }
 
 .text-card .text-card-content {
