--- a/src/components/Grid/Widgets/WeatherWidget/WeatherWidget.css
+++ b/src/components/Grid/Widgets/WeatherWidget/WeatherWidget.css
@@ -1,7 +1,7 @@
 .weather-widget-horizontal {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     background-color: rgba(26, 187, 165, 0.39);
     background: linear-gradient(to bottom, rgba(26, 187, 165, 0.199), rgba(26, 187, 165, 0.521), rgba(26, 187, 165, 0.2));
     color: var(--widget-text, #333);
@@ -10,7 +10,9 @@
     width: 100%; /* Full width of the container */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden; /* Prevent overflow if content spills */
-    align-content: space-between !important;
+
+    padding: 0px 5px 0px 5px;
+    box-sizing: border-box;
 }
 
 .weather-widget-horizontal.dark {
@@ -20,6 +22,7 @@
 }
 
 .weather-icon-section {
+    width: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,7 +31,8 @@
 }
 
 .weather-icon-section.mobile {
-    max-width: 50px;
+    max-width: 100px;
+    width: 40%;
     box-sizing: border-box;
 }
 
@@ -38,54 +42,36 @@
 }
 
 .weather-icon-large.mobile {
-    width: 75px;
-    height: 75px;
+    width: 100%;
+    aspect-ratio: 1;
 }
 
 .weather-details-section {
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding-left: 10px;
-    text-align: left;
+    flex-shrink: 1;
+
     height: 100%;
-    max-width: 60%;
+    width: 60%;
+
+    align-items: center;
+    justify-content: center;
+
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-sizing: border-box;
 }
 
 .weather-details-section.mobile {
 }
 
-.weather-temperature {
-    font-size: 1.8rem;
-    font-weight: bold;
-    justify-self: center;
-}
-
-.weather-condition {
-    font-size: 1rem;
-    margin-bottom: 4px;
-    font-weight: 500;
-    text-transform: capitalize;
-    position: absolute; /* Add this */
-    bottom: 4px; /* Add this */
-    line-height: 1; /* or use the same as font-size */
-    text-transform: capitalize !important;
-}
-
-.location-symbol {
-    margin-right: 4px;
-    transform: rotate(45deg) translateY(-2px); /* To get the correct orientation */
-    display: inline-block;
-    gap: 8px; /* Space between the SVG and text */
-    align-items: center;
-
-    width: 16px; /* Adjust SVG size */
-    height: 16px; /* Adjust SVG size */
-}
-
-.location-text {
-    font-size: 16px; /* Ensure text size matches SVG */
-    line-height: 1; /* Align text with SVG */
+.AlignBox {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
 .weather-location {
@@ -93,8 +79,70 @@
     align-items: center;
 
     gap: 5px; /* Space between the SVG and text */
-    padding-top: 10px;
-    padding-bottom: 10px;
+}
+
+.location-symbol {
+    transform: rotate(45deg) translateY(-1px); /* To get the correct orientation */
+    width: 16px; /* Adjust SVG size */
+    height: 16px; /* Adjust SVG size */
+}
+
+.location-text {
+    font-size: 16px;
+    line-height: 1; /* Align text with SVG */
+}
+
+.weather-temperature {
+    font-size: 1.8rem;
+    font-weight: bold;
+
+    padding: 0px;
+}
+
+.weather-condition {
+    font-size: 1rem;
+    margin-bottom: 4px;
+    font-weight: 500;
+
+    line-height: 1; /* or use the same as font-size */
+    text-transform: capitalize !important;
+}
+
+.weather-condition.mobile {
+    font-size: 0.9rem;
+}
+@media (max-height: 700px) {
+    .weather-condition.mobile {
+        font-size: 0.8rem;
+    }
+    .weather-temperature.mobile {
+        font-size: 1.5;
+    }
+
+    .weather-icon-large.mobile {
+        width: 60px;
+        height: 60px;
+    }
+
+    .location-text.mobile {
+        font-size: 14px; /* Ensure text size matches SVG */
+    }
+
+    .location-symbol.mobile {
+        width: 14px; /* Adjust SVG size */
+        height: 14px; /* Adjust SVG size */
+    }
+
+    .weather-icon-section.mobile {
+        max-width: 100px;
+        width: 30%;
+        box-sizing: border-box;
+    }
+
+    .weather-icon-large.mobile {
+        width: 80px;
+        height: 80pxpx;
+    }
 }
 
 /* Media query for height less than 800px */
