--- a/src/content/EducationCertification/EducationCertificationModal.css
+++ b/src/content/EducationCertification/EducationCertificationModal.css
@@ -17,6 +17,8 @@
 }
 
 .education-modal-item {
+    display: flex;
+    flex-direction: row;
     padding-top: 4px;
     padding-bottom: 10px;
     margin: 0px 10px;
@@ -62,6 +64,35 @@
 
 .certificate-item.dark {
     background-color: rgba(255, 255, 255, 0.041);
+}
+
+.education-badge {
+    align-self: center;
+    height: 70px;
+    aspect-ratio: 1/1;
+    overflow: hidden; /* Prevents overflow if the image doesn't perfectly fit */
+}
+
+.education-badge img {
+    width: 100%; /* Ensures the image scales to fill the container */
+    height: 100%; /* Ensures the image scales to fill the container */
+    object-fit: contain; /* Keeps the image's aspect ratio intact while fitting it */
+}
+
+.education-modal-info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Centers the content horizontally */
+    align-items: center; /* Centers the content vertically */
+    position: relative; /* Optional: This is if you want to use absolute positioning later */
+    width: 95%; /* Make sure the container spans the available width */
+}
+
+@media (min-width: 768px) {
+    .education-modal-info-container > * {
+        position: relative; /* Allow child elements to be positioned relative to the container */
+        left: -20px; /* Move all children by -20px */
+    }
 }
 
 .education-modal-title {
@@ -132,4 +163,30 @@
 
 .education-location.dark {
     color: var(--darkmode-text-color);
+}
+
+.modalBadge {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.89);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0; /* Initially hidden */
+    visibility: hidden; /* Hidden by default */
+    transition: opacity 0.5s ease, visibility 0.5s ease; /* Smooth transition */
+    z-index: 1000; /* Ensure it appears above other content */
+}
+
+.modalBadge.open {
+    opacity: 1;
+    visibility: visible; /* When modal is open */
+}
+
+.modal-contentBadge img {
+    max-width: 100%;
+    max-height: 100%;
 }
